Working on local

--- a/deploy machine learning model on heroku/app/templates/main.html
+++ b/deploy machine learning model on heroku/app/templates/main.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <center>
     <img
-    src="{{ url_for('static', filename=file_name) }}"
+    src="{{ href }}"
     height = "600"
 ></img>
 <br/><br/>
@@ -10,5 +10,4 @@
     <label>Input a comma-separated list of age values:</label>
     <input name="text">
     <input type="submit">
-    
 </form>
